--- a/code/superweekend.html
+++ b/code/superweekend.html
@@ -8,4 +8,5 @@
   <h1>SUPERWEEKEND</h1>
   <p>Session 4-tracks — TinTapes exclusive.</p>
   <audio controls preload="metadata"><source src="superweekend.mp3" type="audio/mpeg"></audio>
+  <img src="moto.gif" alt="Moto" class="moto">
 </body></html>
