--- a/code/superweekend.html
+++ b/code/superweekend.html
@@ -60,6 +60,6 @@
   <audio controls preload="metadata">
     <source src="superweekend.mp3" type="audio/mpeg">
   </audio>
-  <img src="moto.gif.png" alt="Moto" class="moto">
+  <img src="moto.gif" alt="Moto" class="moto">
 </body>
 </html>
