--- a/code/superweekend.html
+++ b/code/superweekend.html
@@ -6,50 +6,48 @@
   <title>SUPERWEEKEND — TinTapes</title>
   <style>
     body {
-      background:#000;
-      color:#fff;
-      font-family:monospace;
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      gap:1rem;
-      text-align:center;
-    }
-    a.back {
-      position:fixed;
-      top:14px;
-      left:14px;
-      color:#aaa;
-      text-decoration:none;
-    }
-    audio {
-      width:min(640px,86vw);
-    }
-    .moto {
-      position: absolute;
-      top: 50px;  /* starting position */
-      left: 50px;
-      width: 32px; /* adjust size */
-      z-index: 9999;
-      animation: cityRide 12s linear infinite;
+      background: #000;
+      color: #fff;
+      font-family: monospace;
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      text-align: center;
     }
 
-    /* Define a more complex "city ride" path */
+    a.back {
+      position: fixed;
+      top: 14px;
+      left: 14px;
+      color: #aaa;
+      text-decoration: none;
+    }
+
+    audio {
+      width: min(640px, 86vw);
+    }
+
+    .moto {
+      position: absolute;
+      width: 64px;          /* Taille augmentée */
+      height: 64px;
+      z-index: 9999;
+      animation: cityRide 12s linear infinite;
+      transform: rotate(0deg);
+      image-rendering: pixelated; /* Pour un rendu pixel art net */
+    }
+
+    /* Animation en rectangle avec rotations */
     @keyframes cityRide {
-      0%   { top: 50px;  left: 50px; }
-      10%  { top: 80px;  left: 200px; }
-      20%  { top: 150px; left: 300px; }
-      30%  { top: 200px; left: 150px; }
-      40%  { top: 100px; left: 400px; }
-      50%  { top: 250px; left: 500px; }
-      60%  { top: 300px; left: 350px; }
-      70%  { top: 150px; left: 250px; }
-      80%  { top: 100px; left: 100px; }
-      90%  { top: 180px; left: 200px; }
-      100% { top: 50px;  left: 50px; } /* back to start */
+      0%   { top: 15%; left: 10%; transform: rotate(0deg); }    /* Haut-gauche → droite */
+      25%  { top: 15%; left: 85%; transform: rotate(90deg); }  /* Haut-droite → bas */
+      50%  { top: 80%; left: 85%; transform: rotate(180deg); } /* Bas-droite → gauche */
+      75%  { top: 80%; left: 10%; transform: rotate(270deg); } /* Bas-gauche → haut */
+      100% { top: 15%; left: 10%; transform: rotate(360deg); } /* Retour au départ */
     }
   </style>
 </head>
@@ -63,3 +61,4 @@
   <img src="moto.gif" alt="Moto" class="moto">
 </body>
 </html>
+
