--- a/code/superweekend.html
+++ b/code/superweekend.html
@@ -32,23 +32,37 @@
     }
 
     .moto {
-      position: absolute;
-      width: 64px;          /* Taille augmentée */
-      height: 64px;
-      z-index: 9999;
-      animation: cityRide 12s linear infinite;
-      transform: rotate(0deg);
-      image-rendering: pixelated; /* Pour un rendu pixel art net */
-    }
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  z-index: 9999;
+  animation: cityRide 16s linear infinite; /* Durée augmentée pour les pauses */
+  transform: rotate(0deg);
+  image-rendering: pixelated;
+  transition: transform 0.5s ease-in-out; /* Rotation fluide */
+}
 
-    /* Animation en rectangle avec rotations */
-    @keyframes cityRide {
-      0%   { top: 15%; left: 10%; transform: rotate(0deg); }    /* Haut-gauche → droite */
-      25%  { top: 15%; left: 85%; transform: rotate(90deg); }  /* Haut-droite → bas */
-      50%  { top: 80%; left: 85%; transform: rotate(180deg); } /* Bas-droite → gauche */
-      75%  { top: 80%; left: 10%; transform: rotate(270deg); } /* Bas-gauche → haut */
-      100% { top: 15%; left: 10%; transform: rotate(360deg); } /* Retour au départ */
-    }
+/* Animation réaliste avec pauses et rotations */
+@keyframes cityRide {
+  /* Départ : haut-gauche → droite */
+  0%   { top: 15%; left: 10%; transform: rotate(0deg); }
+  10%  { top: 15%; left: 70%; transform: rotate(0deg); } /* Avance à droite */
+  12%  { top: 15%; left: 70%; transform: rotate(0deg); } /* Pause avant le virage */
+  15%  { top: 15%; left: 70%; transform: rotate(90deg); } /* Rotation vers le bas */
+  /* Descend vers le bas */
+  25%  { top: 70%; left: 70%; transform: rotate(90deg); }
+  27%  { top: 70%; left: 70%; transform: rotate(90deg); } /* Pause */
+  30%  { top: 70%; left: 70%; transform: rotate(180deg); } /* Rotation vers la gauche */
+  /* Va à gauche */
+  40%  { top: 70%; left: 10%; transform: rotate(180deg); }
+  42%  { top: 70%; left: 10%; transform: rotate(180deg); } /* Pause */
+  45%  { top: 70%; left: 10%; transform: rotate(270deg); } /* Rotation vers le haut */
+  /* Remonte vers le haut */
+  55%  { top: 15%; left: 10%; transform: rotate(270deg); }
+  57%  { top: 15%; left: 10%; transform: rotate(270deg); } /* Pause */
+  60%  { top: 15%; left: 10%; transform: rotate(360deg); } /* Retour à la position initiale */
+}
+
   </style>
 </head>
 <body>
